-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 20, 21
-
Component/s: hotspot
-
b14
-
x86_64
-
linux, os_x
-
Fix failed
The following test failed in the JDK20 CI:
runtime/NMT/SummarySanityCheck.java
Here's a snippet from the log file:
#section:main
----------messages:(7/573)----------
command: main -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:NativeMemoryTracking=summary -XX:+WhiteBoxAPI SummarySanityCheck
reason: User specified action: run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:NativeMemoryTracking=summary -XX:+WhiteBoxAPI SummarySanityCheck
started: Sun Dec 18 01:30:57 UTC 2022
Mode: othervm [/othervm specified]
Additional options from @modules: --add-modules java.base,java.management --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
finished: Sun Dec 18 01:31:21 UTC 2022
elapsed time (seconds): 24.51
----------configuration:(4/111)----------
<snip>
----------System.out:(1/70)----------
[2022-12-18T01:31:17.676993882Z] Gathering output for process 1500379
----------System.err:(198/11516)----------
java.lang.Exception: Total committed (126251) did not match the summarized committed (126325) . Stdout is :
1500070:
Native Memory Tracking:
(Omitting categories weighting less than 1KB)
Total: reserved=2327235KB, committed=126251KB
malloc: 50751KB #345243
mmap: reserved=2276484KB, committed=75500KB
- Java Heap (reserved=1013760KB, committed=14336KB)
(mmap: reserved=1013760KB, committed=14336KB)
- Class (reserved=1048756KB, committed=372KB)
(classes #1098)
( instance classes #959, array classes #139)
(malloc=180KB #4663) (peak=180KB #4660)
(mmap: reserved=1048576KB, committed=192KB)
( Metadata: )
( reserved=65536KB, committed=2816KB)
( used=2767KB)
( waste=49KB =1.73%)
( Class space:)
( reserved=1048576KB, committed=192KB)
( used=91KB)
( waste=101KB =52.38%)
- Thread (reserved=27920KB, committed=1308KB)
(thread #28)
(stack: reserved=27844KB, committed=1232KB)
(malloc=44KB #172) (peak=52KB #176)
(arena=32KB #55) (peak=435KB #51)
- Code (reserved=55095KB, committed=15815KB)
(malloc=5559KB #170440) (peak=5559KB #170447)
(mmap: reserved=49536KB, committed=10256KB)
(arena=0KB #0) (peak=33KB #1)
- GC (reserved=76858KB, committed=55398KB)
(malloc=22054KB #3448) (at peak)
(mmap: reserved=54804KB, committed=33344KB)
- GCCardSet (reserved=85KB, committed=85KB)
(malloc=85KB #1125) (at peak)
- Compiler (reserved=851KB, committed=851KB)
(malloc=61KB #115) (peak=75KB #120)
(arena=791KB #10) (peak=58749KB #10)
- Internal (reserved=8694KB, committed=8694KB)
(malloc=8658KB #157677) (at peak)
(mmap: reserved=36KB, committed=36KB)
- Other (reserved=2KB, committed=2KB)
(malloc=2KB #1) (at peak)
- Symbol (reserved=1200KB, committed=1200KB)
(malloc=840KB #3351) (at peak)
(arena=360KB #1) (at peak)
- Native Memory Tracking (reserved=5403KB, committed=5403KB)
(malloc=9KB #84) (at peak)
(tracking overhead=5394KB)
- Shared class space (reserved=16384KB, committed=13280KB)
(mmap: reserved=16384KB, committed=13280KB)
- Arena Chunk (reserved=6311KB, committed=6311KB)
(malloc=6311KB #284) (peak=59179KB #1446)
- Module (reserved=195KB, committed=195KB)
(malloc=195KB #2033) (at peak)
- Safepoint (reserved=8KB, committed=8KB)
(mmap: reserved=8KB, committed=8KB)
- Synchronization (reserved=213KB, committed=213KB)
(malloc=213KB #1782) (at peak)
- Serviceability (reserved=17KB, committed=17KB)
(malloc=17KB #9) (at peak)
- Metaspace (reserved=65554KB, committed=2834KB)
(malloc=18KB #27) (at peak)
(mmap: reserved=65536KB, committed=2816KB)
- String Deduplication (reserved=1KB, committed=1KB)
(malloc=1KB #8) (at peak)
- Object Monitors (reserved=2KB, committed=2KB)
(malloc=2KB #9) (at peak)
at SummarySanityCheck.throwTestException(SummarySanityCheck.java:116)
at SummarySanityCheck.main(SummarySanityCheck.java:106)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:578)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
at java.base/java.lang.Thread.run(Thread.java:1623)
JavaTest Message: Test threw exception: java.lang.Exception: Total committed (126251) did not match the summarized committed (126325) . Stdout is :
1500070:
Native Memory Tracking:
(Omitting categories weighting less than 1KB)
Total: reserved=2327235KB, committed=126251KB
malloc: 50751KB #345243
mmap: reserved=2276484KB, committed=75500KB
- Java Heap (reserved=1013760KB, committed=14336KB)
(mmap: reserved=1013760KB, committed=14336KB)
- Class (reserved=1048756KB, committed=372KB)
(classes #1098)
( instance classes #959, array classes #139)
(malloc=180KB #4663) (peak=180KB #4660)
(mmap: reserved=1048576KB, committed=192KB)
( Metadata: )
( reserved=65536KB, committed=2816KB)
( used=2767KB)
( waste=49KB =1.73%)
( Class space:)
( reserved=1048576KB, committed=192KB)
( used=91KB)
( waste=101KB =52.38%)
- Thread (reserved=27920KB, committed=1308KB)
(thread #28)
(stack: reserved=27844KB, committed=1232KB)
(malloc=44KB #172) (peak=52KB #176)
(arena=32KB #55) (peak=435KB #51)
- Code (reserved=55095KB, committed=15815KB)
(malloc=5559KB #170440) (peak=5559KB #170447)
(mmap: reserved=49536KB, committed=10256KB)
(arena=0KB #0) (peak=33KB #1)
- GC (reserved=76858KB, committed=55398KB)
(malloc=22054KB #3448) (at peak)
(mmap: reserved=54804KB, committed=33344KB)
- GCCardSet (reserved=85KB, committed=85KB)
(malloc=85KB #1125) (at peak)
- Compiler (reserved=851KB, committed=851KB)
(malloc=61KB #115) (peak=75KB #120)
(arena=791KB #10) (peak=58749KB #10)
- Internal (reserved=8694KB, committed=8694KB)
(malloc=8658KB #157677) (at peak)
(mmap: reserved=36KB, committed=36KB)
- Other (reserved=2KB, committed=2KB)
(malloc=2KB #1) (at peak)
- Symbol (reserved=1200KB, committed=1200KB)
(malloc=840KB #3351) (at peak)
(arena=360KB #1) (at peak)
- Native Memory Tracking (reserved=5403KB, committed=5403KB)
(malloc=9KB #84) (at peak)
(tracking overhead=5394KB)
- Shared class space (reserved=16384KB, committed=13280KB)
(mmap: reserved=16384KB, committed=13280KB)
- Arena Chunk (reserved=6311KB, committed=6311KB)
(malloc=6311KB #284) (peak=59179KB #1446)
- Module (reserved=195KB, committed=195KB)
(malloc=195KB #2033) (at peak)
- Safepoint (reserved=8KB, committed=8KB)
(mmap: reserved=8KB, committed=8KB)
- Synchronization (reserved=213KB, committed=213KB)
(malloc=213KB #1782) (at peak)
- Serviceability (reserved=17KB, committed=17KB)
(malloc=17KB #9) (at peak)
- Metaspace (reserved=65554KB, committed=2834KB)
(malloc=18KB #27) (at peak)
(mmap: reserved=65536KB, committed=2816KB)
- String Deduplication (reserved=1KB, committed=1KB)
(malloc=1KB #8) (at peak)
- Object Monitors (reserved=2KB, committed=2KB)
(malloc=2KB #9) (at peak)
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.Exception: Total committed (126251) did not match the summarized committed (126325) . Stdout is : 1500070: Native Memory Tracking: (Omitting categories weighting less than 1KB) Total: reserved=2327235KB, committed=126251KB malloc: 50751KB #345243 mmap: reserved=2276484KB, committed=75500KB - Java Heap (reserved=1013760KB, committed=14336KB) (mmap: reserved=1013760KB, committed=14336KB) - Class (reserved=1048756KB, committed=372KB) (classes #1098) ( instance classes #959, array classes #139) (malloc=180KB #4663) (peak=180KB #4660) (mmap: reserved=1048576KB, committed=192KB) ( Metadata: ) ( reserved=65536KB, committed=2816KB) ( used=2767KB) ( waste=49KB =1.73%) ( Class space:) ( reserved=1048576KB, committed=192KB) ( used=91KB) ( waste=101KB =52.38%) - Thread (reserved=27920KB, committed=1308KB) (thread #28) (stack: reserved=27844KB, committed=1232KB) (malloc=44KB #172) (peak=52KB #176) (arena=32KB #55) (peak=435KB #51) - Code (reserved=55095KB, committed=15815KB) (malloc=5559KB #170440) (peak=5559KB #170447) (mmap: reserved=49536KB, committed=10256KB) (arena=0KB #0) (peak=33KB #1) - GC (reserved=76858KB, committed=55398KB) (malloc=22054KB #3448) (at peak) (mmap: reserved=54804KB, committed=33344KB) - GCCardSet (reserved=85KB, committed=85KB) (malloc=85KB #1125) (at peak) - Compiler (reserved=851KB, committed=851KB) (malloc=61KB #115) (peak=75KB #120) (arena=791KB #10) (peak=58749KB #10) - Internal (reserved=8694KB, committed=8694KB) (malloc=8658KB #157677) (at peak) (mmap: reserved=36KB, committed=36KB) - Other (reserved=2KB, committed=2KB) (malloc=2KB #1) (at peak) - Symbol (reserved=1200KB, committed=1200KB) (malloc=840KB #3351) (at peak) (arena=360KB #1) (at peak) - Native Memory Tracking (reserved=5403KB, committed=5403KB) (malloc=9KB #84) (at peak) (tracking overhead=5394KB) - Shared class space (reserved=16384KB, committed=13280KB) (mmap: reserved=16384KB, committed=13280KB) - Arena Chunk (reserved=6311KB, committed=6311KB) (malloc=6311KB #284) (peak=59179KB #1446) - Module (reserved=195KB, committed=195KB) (malloc=195KB #2033) (at peak) - Safepoint (reserved=8KB, committed=8KB) (mmap: reserved=8KB, committed=8KB) - Synchronization (reserved=213KB, committed=213KB) (malloc=213KB #1782) (at peak) - Serviceability (reserved=17KB, committed=17KB) (malloc=17KB #9) (at peak) - Metaspace (reserved=65554KB, committed=2834KB) (malloc=18KB #27) (at peak) (mmap: reserved=65536KB, committed=2816KB) - String Deduplication (reserved=1KB, committed=1KB) (malloc=1KB #8) (at peak) - Object Monitors (reserved=2KB, committed=2KB) (malloc=2KB #9) (at peak)
----------rerun:(51/7740)*----------
runtime/NMT/SummarySanityCheck.java
Here's a snippet from the log file:
#section:main
----------messages:(7/573)----------
command: main -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:NativeMemoryTracking=summary -XX:+WhiteBoxAPI SummarySanityCheck
reason: User specified action: run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:NativeMemoryTracking=summary -XX:+WhiteBoxAPI SummarySanityCheck
started: Sun Dec 18 01:30:57 UTC 2022
Mode: othervm [/othervm specified]
Additional options from @modules: --add-modules java.base,java.management --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
finished: Sun Dec 18 01:31:21 UTC 2022
elapsed time (seconds): 24.51
----------configuration:(4/111)----------
<snip>
----------System.out:(1/70)----------
[2022-12-18T01:31:17.676993882Z] Gathering output for process 1500379
----------System.err:(198/11516)----------
java.lang.Exception: Total committed (126251) did not match the summarized committed (126325) . Stdout is :
1500070:
Native Memory Tracking:
(Omitting categories weighting less than 1KB)
Total: reserved=2327235KB, committed=126251KB
malloc: 50751KB #345243
mmap: reserved=2276484KB, committed=75500KB
- Java Heap (reserved=1013760KB, committed=14336KB)
(mmap: reserved=1013760KB, committed=14336KB)
- Class (reserved=1048756KB, committed=372KB)
(classes #1098)
( instance classes #959, array classes #139)
(malloc=180KB #4663) (peak=180KB #4660)
(mmap: reserved=1048576KB, committed=192KB)
( Metadata: )
( reserved=65536KB, committed=2816KB)
( used=2767KB)
( waste=49KB =1.73%)
( Class space:)
( reserved=1048576KB, committed=192KB)
( used=91KB)
( waste=101KB =52.38%)
- Thread (reserved=27920KB, committed=1308KB)
(thread #28)
(stack: reserved=27844KB, committed=1232KB)
(malloc=44KB #172) (peak=52KB #176)
(arena=32KB #55) (peak=435KB #51)
- Code (reserved=55095KB, committed=15815KB)
(malloc=5559KB #170440) (peak=5559KB #170447)
(mmap: reserved=49536KB, committed=10256KB)
(arena=0KB #0) (peak=33KB #1)
- GC (reserved=76858KB, committed=55398KB)
(malloc=22054KB #3448) (at peak)
(mmap: reserved=54804KB, committed=33344KB)
- GCCardSet (reserved=85KB, committed=85KB)
(malloc=85KB #1125) (at peak)
- Compiler (reserved=851KB, committed=851KB)
(malloc=61KB #115) (peak=75KB #120)
(arena=791KB #10) (peak=58749KB #10)
- Internal (reserved=8694KB, committed=8694KB)
(malloc=8658KB #157677) (at peak)
(mmap: reserved=36KB, committed=36KB)
- Other (reserved=2KB, committed=2KB)
(malloc=2KB #1) (at peak)
- Symbol (reserved=1200KB, committed=1200KB)
(malloc=840KB #3351) (at peak)
(arena=360KB #1) (at peak)
- Native Memory Tracking (reserved=5403KB, committed=5403KB)
(malloc=9KB #84) (at peak)
(tracking overhead=5394KB)
- Shared class space (reserved=16384KB, committed=13280KB)
(mmap: reserved=16384KB, committed=13280KB)
- Arena Chunk (reserved=6311KB, committed=6311KB)
(malloc=6311KB #284) (peak=59179KB #1446)
- Module (reserved=195KB, committed=195KB)
(malloc=195KB #2033) (at peak)
- Safepoint (reserved=8KB, committed=8KB)
(mmap: reserved=8KB, committed=8KB)
- Synchronization (reserved=213KB, committed=213KB)
(malloc=213KB #1782) (at peak)
- Serviceability (reserved=17KB, committed=17KB)
(malloc=17KB #9) (at peak)
- Metaspace (reserved=65554KB, committed=2834KB)
(malloc=18KB #27) (at peak)
(mmap: reserved=65536KB, committed=2816KB)
- String Deduplication (reserved=1KB, committed=1KB)
(malloc=1KB #8) (at peak)
- Object Monitors (reserved=2KB, committed=2KB)
(malloc=2KB #9) (at peak)
at SummarySanityCheck.throwTestException(SummarySanityCheck.java:116)
at SummarySanityCheck.main(SummarySanityCheck.java:106)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:578)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
at java.base/java.lang.Thread.run(Thread.java:1623)
JavaTest Message: Test threw exception: java.lang.Exception: Total committed (126251) did not match the summarized committed (126325) . Stdout is :
1500070:
Native Memory Tracking:
(Omitting categories weighting less than 1KB)
Total: reserved=2327235KB, committed=126251KB
malloc: 50751KB #345243
mmap: reserved=2276484KB, committed=75500KB
- Java Heap (reserved=1013760KB, committed=14336KB)
(mmap: reserved=1013760KB, committed=14336KB)
- Class (reserved=1048756KB, committed=372KB)
(classes #1098)
( instance classes #959, array classes #139)
(malloc=180KB #4663) (peak=180KB #4660)
(mmap: reserved=1048576KB, committed=192KB)
( Metadata: )
( reserved=65536KB, committed=2816KB)
( used=2767KB)
( waste=49KB =1.73%)
( Class space:)
( reserved=1048576KB, committed=192KB)
( used=91KB)
( waste=101KB =52.38%)
- Thread (reserved=27920KB, committed=1308KB)
(thread #28)
(stack: reserved=27844KB, committed=1232KB)
(malloc=44KB #172) (peak=52KB #176)
(arena=32KB #55) (peak=435KB #51)
- Code (reserved=55095KB, committed=15815KB)
(malloc=5559KB #170440) (peak=5559KB #170447)
(mmap: reserved=49536KB, committed=10256KB)
(arena=0KB #0) (peak=33KB #1)
- GC (reserved=76858KB, committed=55398KB)
(malloc=22054KB #3448) (at peak)
(mmap: reserved=54804KB, committed=33344KB)
- GCCardSet (reserved=85KB, committed=85KB)
(malloc=85KB #1125) (at peak)
- Compiler (reserved=851KB, committed=851KB)
(malloc=61KB #115) (peak=75KB #120)
(arena=791KB #10) (peak=58749KB #10)
- Internal (reserved=8694KB, committed=8694KB)
(malloc=8658KB #157677) (at peak)
(mmap: reserved=36KB, committed=36KB)
- Other (reserved=2KB, committed=2KB)
(malloc=2KB #1) (at peak)
- Symbol (reserved=1200KB, committed=1200KB)
(malloc=840KB #3351) (at peak)
(arena=360KB #1) (at peak)
- Native Memory Tracking (reserved=5403KB, committed=5403KB)
(malloc=9KB #84) (at peak)
(tracking overhead=5394KB)
- Shared class space (reserved=16384KB, committed=13280KB)
(mmap: reserved=16384KB, committed=13280KB)
- Arena Chunk (reserved=6311KB, committed=6311KB)
(malloc=6311KB #284) (peak=59179KB #1446)
- Module (reserved=195KB, committed=195KB)
(malloc=195KB #2033) (at peak)
- Safepoint (reserved=8KB, committed=8KB)
(mmap: reserved=8KB, committed=8KB)
- Synchronization (reserved=213KB, committed=213KB)
(malloc=213KB #1782) (at peak)
- Serviceability (reserved=17KB, committed=17KB)
(malloc=17KB #9) (at peak)
- Metaspace (reserved=65554KB, committed=2834KB)
(malloc=18KB #27) (at peak)
(mmap: reserved=65536KB, committed=2816KB)
- String Deduplication (reserved=1KB, committed=1KB)
(malloc=1KB #8) (at peak)
- Object Monitors (reserved=2KB, committed=2KB)
(malloc=2KB #9) (at peak)
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.Exception: Total committed (126251) did not match the summarized committed (126325) . Stdout is : 1500070: Native Memory Tracking: (Omitting categories weighting less than 1KB) Total: reserved=2327235KB, committed=126251KB malloc: 50751KB #345243 mmap: reserved=2276484KB, committed=75500KB - Java Heap (reserved=1013760KB, committed=14336KB) (mmap: reserved=1013760KB, committed=14336KB) - Class (reserved=1048756KB, committed=372KB) (classes #1098) ( instance classes #959, array classes #139) (malloc=180KB #4663) (peak=180KB #4660) (mmap: reserved=1048576KB, committed=192KB) ( Metadata: ) ( reserved=65536KB, committed=2816KB) ( used=2767KB) ( waste=49KB =1.73%) ( Class space:) ( reserved=1048576KB, committed=192KB) ( used=91KB) ( waste=101KB =52.38%) - Thread (reserved=27920KB, committed=1308KB) (thread #28) (stack: reserved=27844KB, committed=1232KB) (malloc=44KB #172) (peak=52KB #176) (arena=32KB #55) (peak=435KB #51) - Code (reserved=55095KB, committed=15815KB) (malloc=5559KB #170440) (peak=5559KB #170447) (mmap: reserved=49536KB, committed=10256KB) (arena=0KB #0) (peak=33KB #1) - GC (reserved=76858KB, committed=55398KB) (malloc=22054KB #3448) (at peak) (mmap: reserved=54804KB, committed=33344KB) - GCCardSet (reserved=85KB, committed=85KB) (malloc=85KB #1125) (at peak) - Compiler (reserved=851KB, committed=851KB) (malloc=61KB #115) (peak=75KB #120) (arena=791KB #10) (peak=58749KB #10) - Internal (reserved=8694KB, committed=8694KB) (malloc=8658KB #157677) (at peak) (mmap: reserved=36KB, committed=36KB) - Other (reserved=2KB, committed=2KB) (malloc=2KB #1) (at peak) - Symbol (reserved=1200KB, committed=1200KB) (malloc=840KB #3351) (at peak) (arena=360KB #1) (at peak) - Native Memory Tracking (reserved=5403KB, committed=5403KB) (malloc=9KB #84) (at peak) (tracking overhead=5394KB) - Shared class space (reserved=16384KB, committed=13280KB) (mmap: reserved=16384KB, committed=13280KB) - Arena Chunk (reserved=6311KB, committed=6311KB) (malloc=6311KB #284) (peak=59179KB #1446) - Module (reserved=195KB, committed=195KB) (malloc=195KB #2033) (at peak) - Safepoint (reserved=8KB, committed=8KB) (mmap: reserved=8KB, committed=8KB) - Synchronization (reserved=213KB, committed=213KB) (malloc=213KB #1782) (at peak) - Serviceability (reserved=17KB, committed=17KB) (malloc=17KB #9) (at peak) - Metaspace (reserved=65554KB, committed=2834KB) (malloc=18KB #27) (at peak) (mmap: reserved=65536KB, committed=2816KB) - String Deduplication (reserved=1KB, committed=1KB) (malloc=1KB #8) (at peak) - Object Monitors (reserved=2KB, committed=2KB) (malloc=2KB #9) (at peak)
----------rerun:(51/7740)*----------
- is cloned by
-
JDK-8315462 [REDO] runtime/NMT/SummarySanityCheck.java failed with "Total committed (MMMMMM) did not match the summarized committed (NNNNNN)"
-
- Resolved
-
- relates to
-
JDK-8315378 [BACKOUT] runtime/NMT/SummarySanityCheck.java failed with "Total committed (MMMMMM) did not match the summarized committed (NNNNNN)"
-
- Closed
-
- links to
-
Commit
openjdk/jdk/bf63945a
-
Review(master)
openjdk/jdk/15306